[package]
name = "parrothacker1-bot"
version = "0.2.0"
authors = ["parrothacker1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.4.0", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.3.0", features = ["rt-multi-thread", "macros"] }
rand = "0.5.5"
serde_json="1.0.64"
serde="*"
reqwest="*"
futures="*"
[profile.release]
lto = true

